# lucius

./: .env.example  .lucius_exclusions  ARCHITECTURE.md  AUTHORIZATION_TESTING_GUIDE.md  CHANGELOG.md  COMPLETE_DOCUMENTATION_INDEX.md  COMPLETE_WORKFLOW_GUIDE.md  CONFIRMED_FINDINGS.md  ETHICAL_TESTING_CHECKLIST.md  ETHICAL_TESTING_ENHANCEMENTS.md  ETHICAL_TESTING_SUITE_DELIVERY.md  FEATURES.md  FRAMEWORK_ENHANCEMENTS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LUCIUS_EXTENDED.md  OPTION_A_COMPLETE.md  OPTION_A_ENHANCEMENTS_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_COMPLETION_SUMMARY.txt  README_ENHANCEMENT_SUMMARY.md  README_FINAL_REPORT.md  RESTORATION_SUMMARY.md  ROBINHOOD_ASSESSMENT_SUMMARY.md  ROBINHOOD_COMPLIANCE_SUMMARY.md  ROBINHOOD_EVIDENCE_20260122_152458.txt  ROBINHOOD_PROTOCOL.md  ROBINHOOD_QUICK_REFERENCE.md  SCAN_HALT_NOTICE.md  SUBMISSION_READY.md  TESTING_DOCUMENTATION_INDEX.md  TESTING_QUICKSTART.md  check_syntax.py  docker-compose.yml  pyproject.toml  requirements.txt  results.json  robinhood_findings.json  robinhood_full.json  robinhood_phase1.json  (+7 more)
operations/: Dockerfile  __init__.py  cli.py  config.py  database.py  models.py  requirements.txt
scripts/: init-db.sql
sentinel/: Dockerfile  __init__.py  cli.py  config.py  container_scanner.py  exploit_predictor.py  iac_scanner.py  nvd_client.py  parsers.py  remediation_engine.py  requirements.txt  sast_analyzer.py  sbom.py  scanner.py  secrets_scanner.py  talon_client.py  threat_intelligence.py  web_scanner.py
shared/: __init__.py  interfaces.py  logging.py  requirements.txt  types.py
(+58 files in other folders)
