[metadata]
name = lucius
version = 1.0.0
description = Lucius Operations Platform - Security & Operations Management
long_description = file: README.md
long_description_content_type = text/markdown
author = Lucius Team
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Security

[options]
python_requires = >=3.11
packages = find:
install_requires =
    sublist3r>=1.0.0
    sqlmap>=1.8.0

[options.packages.find]
include = sentinel, talon, operations, shared

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-asyncio>=0.21.0
    black>=23.0.0
    ruff>=0.1.0
    mypy>=1.5.0
    pre-commit>=3.4.0
